--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     active: default
   data:
     mongodb:
-      uri: mongodb://localhost:27017/xyinc
+      uri: mongodb://mongodb:27017/xyinc
 
 
 
