Alterados profiles, Swagger, e preenchido README.md

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,5 +10,7 @@ services:
     image: icaroafonso/xy-inc
     ports:
       - 8080:8080
+    environment:
+      - "SPRING_PROFILES_ACTIVE=prod"
     links:
       - mongodb
